# uni-llm

./: .gitignore  Cargo.toml  README.md  uni-llm.toml
docs/: MODELS.md
examples/: basic.rs  basic_chat.rs  fallback.rs  json_output.rs  multi_turn.rs  multimodal.rs  stream.rs  streaming.rs  tool_calling.rs
src/: client.rs  config.rs  error.rs  lib.rs  logging.rs  request.rs  response.rs  stream.rs  task.rs  types.rs
src/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs  wenxin.rs
