[package]
name = "uni-llm"
version = "0.1.0"
edition = "2021"
description = "Unified LLM API client for multiple commercial model providers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kevin/uni-llm"
keywords = ["llm", "openai", "anthropic", "gemini", "api"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.13", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }
tracing-appender = "0.2"
thiserror = "2"
tokio-stream = "0.1"
eventsource-stream = "0.2"
rand = "0.10"

[dev-dependencies]
anyhow = "1"
